--- a/descopera.css
+++ b/descopera.css
@@ -1,11 +1,12 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: "Open Sans",Arial,sans-serif;
+    font-family: Fira Sans,-apple-system,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 header {
     background-image: url("../poze_descopera/poza_aurora_boreala.jpg");
     height: 100vh;
+    background-size: cover;
     display: flex;
     flex-direction: column;
 }
@@ -13,7 +14,7 @@ header h1 {
     margin: auto;
     font-size: 2.7rem;
     font-weight: bold;
-    color:rgba(255, 255, 255, 0.3);
+    color:rgba(255, 255, 255, 0.6);
     text-transform: uppercase;  
     font-family: "Playfair Display",Georgia,serif;
     margin-block-end: 0;
