--- a/reykjavik.css
+++ b/reykjavik.css
@@ -4,7 +4,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: "Open Sans",Arial,sans-serif;
+    font-family: Fira Sans,-apple-system,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 .wrapper {
     width: 95vw;
@@ -12,7 +12,6 @@ body {
     background-color:  #f7f7f7;
     color:  #11316c;
     box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
-    font-family: Fira Sans,-apple-system,Helvetica Neue,Helvetica,Arial,sans-serif;
     font-size: 1rem;
 }
 header {
@@ -20,13 +19,14 @@ header {
     display: flex;
     flex-direction: column;
     background-image: url("../poze_reykjavik/ghetari.jpg");
+    background-size: cover;
 }
 header h1 {
     margin-inline: auto;
     margin-block-start: 15%;
     font-size: 2.6rem;
     font-weight: bold;
-    color:rgba(255, 255, 255, 0.3);
+    color:rgba(255, 255, 255, 0.6);
     text-transform: uppercase;
     font-family: "Playfair Display",Georgia,serif;
     transition: transform 3s;
