--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header {
     align-items: center;
     align-content: space-between;
     justify-items: center;
-    justify-content: end;
+    
 }
 .header ul {
     margin: 0;
@@ -148,8 +148,7 @@ header .menu-icon .nav-icon:after {
     text-align: justify;
 }
 .photo { 
-    width: 100%;
-    height: auto;
+    max-height:20rem;
     margin: 0;
     padding: 0;
 }
@@ -273,8 +272,9 @@ input.buton.trimite {
     margin: 0;
 }
 
-@media (min-width: 34rem) {
-    header {
+@media (min-width: 50rem) {
+   
+    .header {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -292,6 +292,7 @@ input.buton.trimite {
     }
     body {
         min-height: 100vh;
+        margin: 0;
     }
     .container {
         height: 35em;
@@ -311,12 +312,11 @@ input.buton.trimite {
         box-shadow: 0.5rem 0.25rem 1rem -0.25rem rgba(0, 0, 0, 0.25);
         border-radius: 1rem;
         display: grid;
+        grid-auto-columns: auto;
     }
     .main h2 {
         padding-top: 2rem;
         height: 8ch;
-        width: 30rem;
-        order: 1;
         font-size: 4ch;
         grid-column: 1 / 2;
         grid-row: 1 / 2;
@@ -325,7 +325,8 @@ input.buton.trimite {
         font-size: 3ch;
         grid-column: 1/ 2;
         grid-row: 2 / 3;
-        padding-left: 3rem;
+        margin-left:2rem;
+       
     }
     .main h3 {
         grid-column: 1/ 3;
@@ -336,14 +337,12 @@ input.buton.trimite {
         margin-bottom: 6rem;
     }
     .main .photo { 
-        width: 45rem;
+      
         height: auto;
+        width:100%;
         margin: 0;
         grid-column: 3/ 4;
         grid-row: 1/ 4;
-        grid-template-rows: minmax(10px, 60px);
-        align-self: end;
-        justify-self: self-end;
     }
     .main .showcase {
         grid-column: 1/4;
@@ -379,7 +378,7 @@ input.buton.trimite {
     .cardmiere {
         margin-top: 5rem;
         height: auto;
-        width: 18rem;
+        width: auto;
     }
     .cardmiere img { 
         align-content: center;
@@ -409,3 +408,4 @@ input.buton.trimite {
         text-align: left;
     }
 } 
+
