--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
-.mainheader {
+.main-header {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,14 +26,41 @@ body {
     align-items: center;
     gap: 1rem;
     color: rgb(37 69 54);
-    padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+    padding: 1.5rem;
 }
 
+
+.main-contact {
+    max-width: 100%;   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    color: rgb(37 69 54);
+    padding: 1.5rem;
+}
+
+.main-index {
+    max-width: 100%;   
+   text-align: center;
+    align-items: stretch;
+    gap: 1rem;
+    color: rgb(37 69 54);
+    padding: 1.5rem;
+}
+
+
 .description{
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: center;
+}
+
+.icoanecontact{
+    display: grid;
+    gap: 1rem;
+    align-items: stretch;
     text-align: center;
 }
 
@@ -67,12 +94,12 @@ img {
     max-height: auto;
 }
 
-ul{
+ul {
     text-align: left;
 }
 
-header {
-    background-color:rgb(37 69 54);
+.lista {
+    text-align: center;
 }
 
 .nav {
@@ -80,6 +107,8 @@ header {
     gap: 2rem;
     justify-content: center;
     padding: 2rem 0 2rem 0rem;
+    background-color:rgb(37 69 54);
+    width: 100vw;
 }
 
 .nav-link {
@@ -108,6 +137,7 @@ header {
 
 footer {
     background-color: rgb(37 69 54);
+    text-align: center;
     color: white;
     padding: 2rem 0 2rem 0;
     width: 100%;
@@ -115,84 +145,156 @@ footer {
 
 
 @media (min-width: 650px) {
+   
     .main {
-        max-width: 100%;   
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
         gap: 2rem;
-        color: rgb(37 69 54);
-        padding:2rem 2rem 2rem 2rem;
+        padding: 2rem 1.5rem 2rem 1.5rem;
         font-size: 1.3rem;
+        justify-items: center;
        }
    
     .logo {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
         gap: 5rem;
-        padding: 1rem 0 1rem 0;
     }
 
-    .description {
-        display: inline-flex;
-        flex-direction: column;
-        gap: 1.7rem;
-        align-items: center;
+    .lista-locatie {
         text-align: center;
+    }
+
+    .main-contact {
+        display: grid;
+        padding: 1.5rem;
+        row-gap: 0.5rem;
+        column-gap: 0.5rem;
+    }
+
+
+    .main-index {
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+        grid-template-rows: repeat(6, auto);
+        gap: 1.7rem;
         font-size: 1.3rem;
+
+    }
+
+    h1 {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+    }
+
+    .pozacuplu {
+        grid-column: 2 / 3;
+    }
+
+    .ipad {
+        grid-column: 2 / 3;
+        grid-row: 5 / 6;
+
+    }
+
+    .text4 {
+        grid-column: 1 / 2;
+    }
+
+
+    .text5 {
+        grid-column: 1 / span 2;
+    
     }
 
     .nav {
-        display: flex;
         gap: 5rem;
-        justify-content: center;
-        padding: 2rem 0 2rem 0rem;
         font-size: 1.5rem;
     }
 
     .phone {
-        display: flex;
-        flex-direction: row;
-        gap: 1rem;
-        align-items: center;
-        color: black;
         font-size: 1.5rem;
         padding: 1rem;
+        justify-content: center;
     }
     
-    .icons{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1.5rem;
+    .icons {
         font-size: 1.5rem;
     }
 
-    .infocontact{
-        display: inline-flex;
-        flex-direction: column;
-        gap: 2.5rem;
-        align-items: flex-start;
+    .infocontact {
+        gap: 2rem;
         justify-content: center;
         font-size: 1.3rem;
     }
 
-    .material-icons{
-        font-family: 'Material Icons';
-        font-weight: normal;
-        font-style: normal;
+    .material-icons {
         font-size: 2.5rem;
-        line-height: 1;
-        letter-spacing: normal;
-        text-transform: none;
-        display: inline-block;
-        white-space: nowrap;
-        word-wrap: normal;
-        direction: ltr;
-        -webkit-font-feature-settings: 'liga';
-        -webkit-font-smoothing: antialiased;
+    }
+
+    .description {
+        text-align: center;
+        align-items: stretch;
+
+    } 
+
+    .galerie {
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+        grid-template-rows: repeat(6, 2fr);
+        gap: 0.5rem;
     }
 }
+
+
+@media (min-width: 1000px) {
+   
+    .nav {
+        gap: 7rem;
+    }
+
+    .ipad {
+        grid-row: 5 / span 2;
+    }
+    .text5 {
+        grid-column: 1 / 2;
+        grid-row: 5 / 6;
+    }
+
+}
+
+
+@media (min-width: 1300px) {
+
+    .logo {
+        gap: 15rem;
+    }
+
+    .nav {
+        font-size: 3rem;
+        padding: 2rem;
+    }
+
+    .main-index {
+        grid-template-rows: auto;
+    }
+
+    .pozacuplu {
+        grid-row: 3 span;
+    }
+
+    .icons {
+        grid-column: 1 / 2;
+    }
+
+    .ipad {
+        grid-row: 2 span;
+    }
+
+    .text4 {
+        grid-row: 6 / 7;
+    }
+
+    .text5 {
+        grid-column: 1 / 2 ;
+        grid-row: 7 / 8 ;
+    }
+}
+
+
