--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ header .menu-icon .nav-icon:after {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    width: fit-content;
+    width: 100%;
     align-self: center;
     padding: 3rem;
     font-family: 'Barlow', sans-serif;
@@ -130,7 +130,7 @@ header .menu-icon .nav-icon:after {
 }
 .main h2 {
     padding-top: 6rem;
-    width: 24rem;
+    width: 100%;
     font-size: 4ch;
     margin: auto;
     align-self: center;
