--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 
 .main-index {
     max-width: 100%;   
-   text-align: center;
+    text-align: center;
     align-items: stretch;
     gap: 1rem;
     color: rgb(37 69 54);
@@ -174,6 +174,7 @@ footer {
         grid-template-columns: 2fr 2fr;
         grid-template-rows: repeat(6, auto);
         gap: 1.7rem;
+        align-items: center;
         font-size: 1.3rem;
 
     }
@@ -273,6 +274,10 @@ footer {
 
     .main-index {
         grid-template-rows: auto;
+    }
+
+    p{
+        font-size: 1.9rem;
     }
 
     .pozacuplu {
