--- a/products.css
+++ b/products.css
@@ -170,6 +170,7 @@ button {
   background-color: var(--gold);
   padding: 0.1rem 0.5rem;
   border: none;
+  cursor: pointer;
 }
 .featured-title {
   color: #fff;
