--- a/classes.css
+++ b/classes.css
@@ -11,7 +11,7 @@ body {
 }
 .nav {
     overflow: hidden;
-    position: fixed;
+    position: sticky;
     background-color: rgba(52, 52, 53, 0.9);
     top: 0%;
     left: 0%;
@@ -24,9 +24,7 @@ body {
     justify-content: space-between;
     margin: 0.5rem;
     padding: 0.2rem;
-}
-.nav li {
-    display: inline-block;
+    list-style: none
 }
 .nav a {
     color: red;
@@ -34,17 +32,19 @@ body {
     text-decoration: none;
 }
 h1 {
-    padding-top: 4rem;
-    padding-bottom: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
     text-align: center;
     font-size: 4vh;
     color: red;
 }
 .classdes {
     display: flex;
-    flex-direction: row;
     gap: 0.3rem;
     padding: 3rem;
+}
+.classdes > div {
+    color:#ff005e;
 }
 .classes {
     display: flex;
@@ -57,8 +57,7 @@ h1 {
 .heroes {
     width: 100%;
     height: auto;
-    border-top: 0.1rem solid red;
-    border-bottom: 0.1rem solid red;
+    border-block: 0.1rem solid red;
 }
 @keyframes zoom-in {
     from { transform: scale(1) translateZ(0);}
@@ -79,7 +78,6 @@ h1 {
 }
 @media screen and (min-width: 1000px) {
     .nav ul {
-        display: flex;
         justify-content: flex-end;
         gap: 1rem;
         font-size: 2.5vh;
