--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ body {
     border-bottom: 0.1rem solid red;
 }
 .d4logo {
-    display:flex;
+    display: block;
     width: 80%;
     height: auto;
     margin-inline: auto;
@@ -104,7 +104,6 @@ h3 {
 }
 @media screen and (min-width: 1000px) {
     .nav ul {
-        display: flex;
         justify-content: flex-end;
         gap: 1rem;
         font-size: 2.5vh;
