--- a/about.css
+++ b/about.css
@@ -43,7 +43,7 @@ main {
   gap: 2rem;
 }
 .slideshow-first {
-  animation: slideshow-second 8s infinite;
+  animation: slideshow-second 3 infinite;
 }
 
 
