--- a/ourstory.css
+++ b/ourstory.css
@@ -159,7 +159,7 @@ main {
 }
 .story-container {
   display: grid;
-  grid-template-rows: 1fr 2fr 1fr 2fr 1fr 2fr 1fr;
+  grid-template-rows: 1fr auto 1fr auto 1fr auto 1fr;
   grid-template-columns: 1fr;
   justify-content: center;
   align-content: center;
