--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ body {
 }
 header {
     background-image: url("../poze_index/ghetari.jpg");
-    height: 100vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
+    background-repeat: no-repeat;
 }
 header h1 {
     margin: auto;
